--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,1 +1,11 @@
-<app-user *ngFor="let user of users" [user]="user"></app-user>
+<h1>app works</h1>
+
+<a routerLink="/">hello component</a>
+<br>
+<a routerLink="/users">AllUsers component</a>
+<br>
+<a routerLink="/posts">AllPosts component</a>
+<br>
+<a routerLink="/comments">AllComments component</a>
+<br>
+
