--- a/src/app/components/all-posts/all-posts.component.html
+++ b/src/app/components/all-posts/all-posts.component.html
@@ -1,4 +1,10 @@
-<router-outlet></router-outlet>
-<p>all-posts works!</p>
 <hr>
-<app-post *ngFor="let post of posts" [post]="post"></app-post>
+
+<div *ngFor="let post of posts">
+  <h2>post #{{post?.id}}</h2>
+  <div>by user #{{post?.userId}}</div>
+  <div>title - {{post?.title}}</div>
+  <div>body - {{post?.body}}</div>
+</div>
+
+<hr>
