--- a/src/app/components/all-comments/all-comments.component.html
+++ b/src/app/components/all-comments/all-comments.component.html
@@ -1,2 +1,3 @@
-<p>all-comments works!</p>
-<app-comment *ngFor="let comment of comments" [comment]="comment"></app-comment>
+<br>
+<router-outlet></router-outlet>
+<app-comment *ngFor="let c of commentList" [comment]="c"></app-comment>
