--- a/src/app/components/all-posts/all-posts.component.html
+++ b/src/app/components/all-posts/all-posts.component.html
@@ -1,10 +1,4 @@
-<hr>
+<br>
+<app-post *ngFor="let p of posts" [post]="p"></app-post>
+<router-outlet></router-outlet>
 
-<div *ngFor="let post of posts">
-  <h2>post #{{post?.id}}</h2>
-  <div>by user #{{post?.userId}}</div>
-  <div>title - {{post?.title}}</div>
-  <div>body - {{post?.body}}</div>
-</div>
-
-<hr>
