--- a/src/app/components/all-users/all-users.component.html
+++ b/src/app/components/all-users/all-users.component.html
@@ -1,13 +1,5 @@
-<router-outlet></router-outlet>
-<p>all-users works!</p>
-<div>
-  {{singleUser?.id}}
-  {{singleUser?.name}}
-  {{singleUser?.email}}
-  {{singleUser?.address.city}}
-  {{singleUser?.address.geo.lat}}
-  {{singleUser?.address.geo.lng}}
+<div *ngFor="let u of users">
+  <app-user [user]="u"></app-user>
 </div>
-<hr>
-<app-user *ngFor="let user of users" [user]="user" (forwardUserData)="catchUserData($event)"></app-user>
+<router-outlet></router-outlet>
 
