Angular HomeWork3 Emitter Done

--- a/src/app/components/all-users/all-users.component.html
+++ b/src/app/components/all-users/all-users.component.html
@@ -1,3 +1,4 @@
+<h1>Author of the comment: {{this.singleUser?.name}}</h1>
 <div *ngFor="let u of users">
   <app-user [user]="u"></app-user>
 </div>
