HW4 Modules+Routes

--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -1,1 +1,7 @@
-<p>user works!</p>
+<br>
+<div>
+  {{user.id}} <h3>{{user.name}} {{user.surname}}</h3>
+  <code>{{user.email}}</code>
+  <button (click)="navigate(user)">Show Posts</button>
+</div>
+<hr>
