HW4 Modules+Routes // problem routes

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,10 +1,10 @@
 <hr>
 <a routerLink="/">Greeting Comp</a>
 <br>
-<a routerLink="/users">User Comp</a>
+<a routerLink="/all-users">User Comp</a>
 <br>
-<a routerLink="/posts">Post Comp</a>
+<a routerLink="/all-posts">Post Comp</a>
 <br>
-<a routerLink="/comments">Comment Comp</a>
+<a routerLink="/all-comments">Comment Comp</a>
 <br>
 <router-outlet></router-outlet>
