--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,1 +1,8 @@
-<p>user works!</p>
+<div>
+  {{user.id}} - {{user.name}}_{{user.surname}}
+  <br>
+  {{user.email}} // {{user.phone}}
+  <br>
+  {{user.website}}
+</div>
+<hr>
